jss-compiler/tests/parser/invalid/missing_semicolon.jss
// Erro sintatico: Falta o ponto e virgula ao final da declaracao
let int x = 10
